--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "makerlist",
+  "name": "pocketpages",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "gobot pocketbase --dir=pb_data --hooksDir=app/hooks --migrationsDir=app/migrations --publicDir=app/public --dev serve",
@@ -13,13 +14,9 @@
     "daisyui": "^4.12.10",
     "dotenv": "^16.4.5",
     "gobot": "^1.0.0-alpha.41",
-    "serve": "^14.2.3",
     "tailwindcss": "^3.4.10"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
-  },
-  "dependencies": {
-    "convex": "^1.14.4"
   }
 }
