--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "gobot pocketbase --dir=pb_data --hooksDir=app/pb_hooks --migrationsDir=app/pb_migrations --dev --http=0.0.0.0:8091 serve",
-    "dev:css": "tailwindcss -i ./app/app.css -o ./app/pb_hooks/pages/app.css --watch",
+    "dev:css": "tailwindcss -i ./app/app.css -o ./app/pb_hooks/pages/assets/app.css --watch",
     "deploy": "bun ./deploy.ts"
   },
   "devDependencies": {
@@ -14,6 +14,7 @@
     "daisyui": "^4.12.10",
     "dotenv": "^16.4.5",
     "gobot": "^1.0.0-alpha.41",
+    "postcss-import": "^16.1.0",
     "tailwindcss": "^3.4.10"
   },
   "peerDependencies": {
