--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "pocketpages",
   "version": "0.0.1",
   "type": "module",
+  "bin": {
+    "pocketpages": "./cli/index.ts"
+  },
   "scripts": {
     "dev": "gobot pocketbase --dir=pb_data --hooksDir=app/pb_hooks --migrationsDir=app/pb_migrations --dev --http=0.0.0.0:8091 serve",
     "dev:css": "tailwindcss -i ./app/pb_hooks/pages/assets/app.src.css -o ./app/pb_hooks/pages/assets/app.css --watch",
@@ -12,6 +15,8 @@
     "@samkirkland/ftp-deploy": "^1.2.4",
     "@tailwindcss/typography": "^0.5.14",
     "@types/bun": "latest",
+    "@types/env-paths": "^2.1.0",
+    "@types/node": "^22.5.1",
     "daisyui": "^4.12.10",
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
@@ -21,5 +26,11 @@
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
-  }
+  },
+  "dependencies": {
+    "commander": "^12.1.0",
+    "env-paths": "^3.0.0",
+    "tsx": "^4.19.0"
+  },
+  "module": "index.ts"
 }
