--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "pocketpages": "./cli/index.ts"
   },
   "scripts": {
-    "dev": "gobot pocketbase --dir=pb_data --hooksDir=app/pb_hooks --migrationsDir=app/pb_migrations --dev --http=0.0.0.0:8091 serve",
+    "dev": "concurrently \"bun:dev:*\"",
+    "dev:pocketpages": "./cli/index.ts dev",
     "dev:css": "tailwindcss -i ./app/pb_hooks/pages/assets/app.src.css -o ./app/pb_hooks/pages/assets/app.css --watch",
     "deploy": "bun ./deploy-pockethost.ts"
   },
@@ -17,6 +18,7 @@
     "@types/bun": "latest",
     "@types/env-paths": "^2.1.0",
     "@types/node": "^22.5.1",
+    "concurrently": "^8.2.2",
     "daisyui": "^4.12.10",
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
