--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "bin": {
     "pocketpages": "./cli/index.ts"
   },
-  "main": "./lib/pocketpages.js",
+  "main": "./pocketpages/index.js",
   "scripts": {
     "dev": "concurrently \"bun:dev:*\"",
-    "dev:pocketpages": "gobot pocketbase --dir=pb_data --hooksDir=app/pb_hooks --dev --http=0.0.0.0:8091 serve",
-    "dev:css": "tailwindcss -i ./app/pb_hooks/pages/assets/app.src.css -o ./app/pb_hooks/pages/assets/app.css --watch",
+    "dev:pocketpages": "gobot pocketbase --dir=pb_data --hooksDir=app --dev --http=0.0.0.0:8091 serve",
+    "dev:css": "tailwindcss -i ./app/assets/app.src.css -o ./app/assets/app.css --watch",
     "deploy": "bun ./deploy-pockethost.ts"
   },
   "devDependencies": {
