--- a/docs/package.json
+++ b/docs/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "concurrently \"bun:dev:*\"",
     "dev:pocketpages": "pocketpages dev",
-    "dev:css": "tailwindcss -i ./app/assets/app.src.css -o ./app/assets/app.css --watch"
+    "dev:css": "tailwindcss -i ./app/assets/app.tailwind.css -o ./app/assets/app.css --watch"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.8",
