--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "main": "./lib/index.js",
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/node": "^22.5.1"
+    "@types/node": "^22.5.2",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.0.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -22,5 +24,13 @@
     "tiged": "^2.12.7",
     "tsx": "^4.19.0"
   },
-  "module": "index.ts"
+  "module": "index.ts",
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailing": "all",
+    "plugins": [
+      "prettier-plugin-organize-imports"
+    ]
+  }
 }
