--- a/starters/daisyui/package.json
+++ b/starters/daisyui/package.json
@@ -1,6 +1,7 @@
 {
   "name": "daisyui",
   "scripts": {
+    "serve": "pocketpages serve",
     "dev": "concurrently \"bun:dev:*\"",
     "dev:pocketpages": "pocketpages dev",
     "dev:css": "tailwindcss -i ./app/app.tailwind.css -o ./app/app.css --watch"
@@ -12,6 +13,6 @@
     "tailwindcss": "^3.4.10"
   },
   "dependencies": {
-    "pocketpages": "^0.0.2"
+    "pocketpages": "^0.0.4"
   }
 }
