--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "commander": "^12.1.0",
     "fs-extra": "^11.2.0",
     "gobot": "^1.0.0-alpha.41",
+    "gobot-pocketbase": "^0.22.20-7",
     "inquirer": "^10.1.8",
     "ora": "^8.1.0",
     "pocketbase-bin": "^0.22.20-4",
@@ -38,6 +39,6 @@
     ]
   },
   "trustedDependencies": [
-    "pocketbase-bin"
+    "gobot-pocketbase"
   ]
 }
