--- a/docs/package.json
+++ b/docs/package.json
@@ -15,11 +15,10 @@
     "postcss-import": "^16.1.0",
     "tailwindcss": "^3.4.10"
   },
-  "dependencies": {
-    "pocketpages": "pocketpages.tgz"
-  },
+  "dependencies": { "pocketpages": "^0.0.4" },
   "trustedDependencies": [
     "esbuild",
+    "gobot-pocketbase",
     "lzma-native"
   ]
 }
