--- a/package.json
+++ b/package.json
@@ -6,13 +6,26 @@
     "pocketpages": "./cli/index.ts"
   },
   "main": "./lib/index.js",
+  "scripts": {
+    "dev": "concurrently \"bun:dev:*\"",
+    "pocketpages": "bun ./cli/index.ts",
+    "serve": "bun ./cli/index.ts serve --hooksDir=app --dev",
+    "dev:serve": "bun ./cli/index.ts serve --hooksDir=app --dev",
+    "dev:css": "tailwindcss -i ./app/assets/app.tailwind.css -o ./app/assets/app.css --watch"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "@types/command-exists": "^1.2.3",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^22.5.2",
     "prettier": "^3.3.3",
-    "prettier-plugin-organize-imports": "^4.0.0"
+    "prettier-plugin-organize-imports": "^4.0.0",
+    "@flydotio/dockerfile": "^0.5.8",
+    "@tailwindcss/typography": "^0.5.14",
+    "concurrently": "^8.2.2",
+    "daisyui": "^4.12.10",
+    "postcss-import": "^16.1.0",
+    "tailwindcss": "^3.4.10"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
@@ -21,7 +34,7 @@
     "command-exists": "^1.2.9",
     "commander": "^12.1.0",
     "fs-extra": "^11.2.0",
-    "gobot-pocketbase": "^0.22.20-8",
+    "gobot-pocketbase": "^0.22.20-14",
     "inquirer": "^10.1.8",
     "ora": "^8.1.0",
     "tiged": "^2.12.7",
