--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "name": "Ben Allfree",
     "github": "benallfree"
   },
+  "types": "dist/main.d.ts",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -19,9 +20,9 @@
     "dist"
   ],
   "scripts": {
-    "build": "pocodex build",
-    "watch": "pocodex watch",
-    "prepare": "pocodex build"
+    "build": "rimraf dist && pocodex build",
+    "watch": "rimraf dist && pocodex watch",
+    "prepare": "rimraf dist && pocodex build"
   },
   "devDependencies": {
     "marked": "^14.1.2",
@@ -30,6 +31,7 @@
     "pocketbase-log": "^0.0.2",
     "pocketbase-node": "^0.0.2",
     "pocketbase-stringify": "^0.0.2",
-    "pocodex": "^0.0.1"
+    "pocodex": "^0.0.1",
+    "rimraf": "^6.0.1"
   }
 }
