--- a/package.json
+++ b/package.json
@@ -34,9 +34,7 @@
     "pocketbase-node": "^0.0.2",
     "pocketbase-stringify": "^0.0.2",
     "pocodex": "^0.0.1",
-    "rimraf": "^6.0.1"
-  },
-  "dependencies": {
+    "rimraf": "^6.0.1",
     "url-parse": "^1.5.10"
   }
 }
