--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
   "files": [
     "dist"
   ],
+  "bin": {
+    "pocketpages": "./dist/cli.js"
+  },
   "scripts": {
     "build": "rimraf dist && pocodex build",
     "watch": "rimraf dist && pocodex watch",
-    "prepare": "rimraf dist && pocodex build"
+    "prepare": "rimraf dist && bun run build"
   },
   "devDependencies": {
     "@s-libs/micro-dash": "^18.0.0",
@@ -34,7 +37,22 @@
     "pocketbase-node": "^0.0.2",
     "pocketbase-stringify": "^0.0.2",
     "pocodex": "^0.0.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "rimraf": "^6.0.1",
     "url-parse": "^1.5.10"
+  },
+  "dependencies": {
+    "commander": "^12.1.0",
+    "copyfiles": "^2.4.1",
+    "fs-extra": "^11.2.0"
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "semi": false,
+    "plugins": [
+      "prettier-plugin-organize-imports"
+    ]
   }
 }
