--- a/starters/deploy-pockethost-ga/.github/workflows/deploy-pockethost.yaml
+++ b/starters/deploy-pockethost-ga/.github/workflows/deploy-pockethost.yaml
@@ -21,7 +21,7 @@ jobs:
           port: ${{ secrets.ftp_port }}
           username: ${{ secrets.ftp_username }}
           password: ${{ secrets.ftp_password }}
-          local-dir: ./app/
+          local-dir: ./pb_hooks/
           server-dir: ./${{ secrets.app_name }}/
           log-level: verbose
           state-name: pb_hooks/.ftp-deploy-sync-state.json
