--- a/starters/daisyui-docs/package.json
+++ b/starters/daisyui-docs/package.json
@@ -2,7 +2,7 @@
   "name": "daisyui-docs",
   "scripts": {
     "serve": "pocketbase serve --dir=pb_data",
-    "dev": "concurrently \"dev:*\"",
+    "dev": "concurrently \"npm:dev:*\"",
     "dev:pocketbase": "pocketbase-22 serve --dir=pb_data --dev",
     "dev:css": "tailwindcss -i ./pb_hooks/pages/assets/app.tailwind.css -o ./pb_hooks/pages/assets/app.css --watch"
   },
