--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pocketpages",
-  "version": "0.8.2",
+  "version": "0.9.0",
   "description": "Server-side JS pages for PocketBase",
   "author": {
     "name": "Ben Allfree",
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@s-libs/micro-dash": "^18.0.0",
     "@types/url-parse": "^1.4.11",
+    "front-matter": "^4.0.2",
     "marked": "^14.1.2",
     "pocketbase-ejs": "^3.1.10002",
     "pocketbase-jsvm": "^0.22.20002",
@@ -36,7 +37,12 @@
     "pocodex": "^0.0.2",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "remark-frontmatter": "^5.0.0",
+    "remark-frontmatter-yaml": "^1.3.0",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
     "rimraf": "^6.0.1",
+    "unified": "^11.0.5",
     "url-parse": "^1.5.10"
   },
   "prettier": {
