--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "compilerOptions": {
+    "lib": ["es2021"],
     "types": ["pocketbase-jsvm"],
+    "strict": true,
     "moduleResolution": "node",
+    "strictNullChecks": true,
+    "noUncheckedIndexedAccess": true,
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
