--- a/starters/htmx/package.json
+++ b/starters/htmx/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "minimal",
+  "name": "htmx",
   "scripts": {
     "serve": "pocketbase --dir=pb_data serve",
     "dev": "pocketbase --dir=pb_data --dev serve"
   },
   "dependencies": {
-    "pocketpages": "^0.9.0"
+    "pocketpages": "latest"
   }
 }
