--- a/starters/mvp/package.json
+++ b/starters/mvp/package.json
@@ -5,6 +5,6 @@
     "dev": "pocketbase --dir=pb_data --dev serve"
   },
   "dependencies": {
-    "pocketpages": "^0.9.0"
+    "pocketpages": "latest"
   }
 }
