--- a/docs/package.json
+++ b/docs/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "phio": "phio",
     "dev": "concurrently \"npm:dev:*\"",
-    "dev:pocketbase": "pocketbase --dir=pb_data --dev serve",
+    "xdev:pocketbase:22": "pocketbase-22 --dir=pb_data_22 --dev serve --http=127.0.0.1:8090",
+    "dev:pocketbase:23": "pocketbase-23 --dir=pb_data_23 --dev serve --http=127.0.0.1:8091",
     "dev:css": "tailwindcss -i ./pb_hooks/pages/assets/app.tailwind.css -o ./pb_hooks/pages/assets/app.css --watch"
   },
   "devDependencies": {
