--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pocketpages",
-  "version": "0.10.0-next.5",
+  "version": "0.10.0-next.6",
   "description": "Server-side JS pages for PocketBase",
   "author": {
     "name": "Ben Allfree",
@@ -25,6 +25,7 @@
     "watch": "rimraf dist && pocodex watch"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.10",
     "@s-libs/micro-dash": "^18.0.0",
     "@types/ejs": "^3.1.5",
     "@types/url-parse": "^1.4.11",
