--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "watch": "rimraf dist && pocodex watch"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.27.10",
     "@s-libs/micro-dash": "^18.0.0",
     "@types/url-parse": "^1.4.11",
     "front-matter": "^4.0.2",
