--- a/docs/package.json
+++ b/docs/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "phio": "phio",
+    "push": "phio deploy --exclude='pb_data*,pb_data*/**/*'",
     "dev": "concurrently \"npm:dev:*\"",
     "dev:pocketbase": "pocketbase --dir=pb_data --dev serve",
     "dev:css": "tailwindcss -i ./pb_hooks/pages/assets/app.tailwind.css -o ./pb_hooks/pages/assets/app.css --watch"
