feat: update htmx starter to work on first run
point to xpi instead of api, remove ctx as it doesn't work, specify folder index for count api

--- a/starters/htmx/package.json
+++ b/starters/htmx/package.json
@@ -5,6 +5,6 @@
     "dev": "pocketbase --dir=pb_data --dev serve"
   },
   "dependencies": {
-    "pocketpages": "latest"
+    "pocketpages": "next"
   }
 }
