--- a/docs/package.json
+++ b/docs/package.json
@@ -3,7 +3,7 @@
     "phio": "phio",
     "push": "phio deploy --exclude='pb_data*,pb_data*/**/*'",
     "dev": "concurrently \"npm:dev:*\"",
-    "dev:pocketbase": "pocketbase --dir=pb_data --dev serve --http=0.0.0.0:8091",
+    "dev:pocketbase": "pocketbase-23 --dir=pb_data --dev serve --http=0.0.0.0:8091",
     "dev:css": "tailwindcss -i ./pb_hooks/pages/assets/app.tailwind.css -o ./pb_hooks/pages/assets/app.css --watch"
   },
   "devDependencies": {
@@ -11,7 +11,7 @@
     "concurrently": "^9.0.1",
     "daisyui": "^4.12.10",
     "phio": "^0.2.4",
-    "pocketbase-jsvm": "^0.22.20001",
+    "pocketbase-jsvm": "^0.23.10002",
     "postcss-import": "^16.1.0",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.11",
