--- a/starters/daisyui-docs/package.json
+++ b/starters/daisyui-docs/package.json
@@ -3,16 +3,13 @@
   "scripts": {
     "serve": "pocketbase serve --dir=pb_data",
     "dev": "concurrently \"npm:dev:*\"",
-    "dev:pocketbase": "pocketbase-22 serve --dir=pb_data --dev",
-    "dev:css": "tailwindcss -i ./pb_hooks/pages/assets/app.tailwind.css -o ./pb_hooks/pages/assets/app.css --watch"
+    "dev:pocketbase": "pocketbase serve --dir=pb_data --dev",
+    "dev:css": "tailwindcss -i ./pb_hooks/pages/app.tailwind.css -o ./pb_hooks/pages/app.css --watch"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.14",
-    "concurrently": "^8.2.2",
-    "daisyui": "^4.12.10",
-    "tailwindcss": "^3.4.10"
-  },
-  "dependencies": {
-    "pocketpages": "^0.8.0"
+    "@tailwindcss/typography": "^0.5.16",
+    "concurrently": "^9.1.2",
+    "daisyui": "^4.12.23",
+    "tailwindcss": "^3.4.17"
   }
 }
