--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "pocodex": "^0.0.2",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
+    "query-string": "^9.1.1",
     "remark-frontmatter": "^5.0.0",
     "remark-frontmatter-yaml": "^1.3.0",
     "remark-parse": "^11.0.0",
@@ -62,5 +63,8 @@
     "plugins": [
       "prettier-plugin-organize-imports"
     ]
+  },
+  "patchedDependencies": {
+    "query-string@9.1.1": "patches/query-string@9.1.1.patch"
   }
 }
