--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/url-parse": "^1.4.11",
     "chokidar-cli": "^3.0.0",
     "concurrently": "^9.1.2",
+    "cookie": "^1.0.2",
     "front-matter": "^4.0.2",
     "marked": "^14.1.2",
     "pocketbase-ejs": "^3.1.10005",
