chore: remove starters from pocketpages npm package

--- a/packages/pocketpages/package.json
+++ b/packages/pocketpages/package.json
@@ -18,8 +18,7 @@
   },
   "homepage": "https://pocketpages.dev",
   "files": [
-    "dist",
-    "starters"
+    "dist"
   ],
   "scripts": {
     "build": "tsup",
