--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -5,7 +5,7 @@
     "dev": "tailwindcss -i ./pb_hooks/pages/assets/app.tailwind.css -o ./pb_hooks/pages/assets/app.css --watch"
   },
   "dependencies": {
-    "pocketpages": "workspace:*"
+    "pocketpages": "workspace:^0.14.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
