--- a/packages/starters/auth/package.json
+++ b/packages/starters/auth/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pocketpages-starter-auth",
+  "private": true,
   "version": "0.0.1",
   "description": "A starter project for PocketPages with authentication",
   "author": {
