--- a/packages/starters/daisyui-docs/package.json
+++ b/packages/starters/daisyui-docs/package.json
@@ -1,5 +1,6 @@
 {
   "name": "pocketpages-starter-daisyui-docs",
+  "private": true,
   "version": "0.0.1",
   "description": "A starter project for PocketPages with DaisyUI and Docs",
   "author": {
