--- a/packages/pocketpages/package.json
+++ b/packages/pocketpages/package.json
@@ -40,7 +40,7 @@
     "pocodex": "^0.0.2",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0",
-    "query-string": "^9.1.1",
+    "qs-lite": "^1.0.0",
     "remark-frontmatter": "^5.0.0",
     "remark-frontmatter-yaml": "^1.3.0",
     "remark-parse": "^11.0.0",
