--- a/packages/pocketpages/package.json
+++ b/packages/pocketpages/package.json
@@ -34,6 +34,7 @@
     "marked": "^14.1.2",
     "pocketbase-ejs": "^3.1.10006",
     "pocketbase-js-sdk-jsvm": "^0.25.10003",
+    "pocketbase-jsvm": "^0.25.10001",
     "pocketbase-log": "^0.0.2",
     "pocketbase-node": "^0.0.3",
     "pocketbase-stringify": "^0.0.2",
@@ -48,7 +49,6 @@
     "rimraf": "^6.0.1",
     "tsup": "^8.3.5",
     "unified": "^11.0.5",
-    "url-parse": "^1.5.10",
-    "pocketbase-jsvm": "^0.25.10001"
+    "url-parse": "^1.5.10"
   }
 }
