chore: include README in pocketpages

--- a/packages/pocketpages/package.json
+++ b/packages/pocketpages/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://pocketpages.dev",
   "files": [
-    "dist"
+    "dist",
+    "*.md"
   ],
   "scripts": {
     "build": "tsup",
