--- a/packages/starters/minimal/package.json
+++ b/packages/starters/minimal/package.json
@@ -3,8 +3,7 @@
   "private": true,
   "version": "0.0.2",
   "dependencies": {
-    "pocketpages": "workspace:^0.15.0",
-    "pocketpages-plugin-ejs": "workspace:^0.0.3"
+    "pocketpages": "workspace:^0.15.0"
   },
   "pockethost": {
     "instanceId": "minimal"
