--- a/packages/plugins/js-sdk/package.json
+++ b/packages/plugins/js-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pocketpages-plugin-js-sdk",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "PocketBase JS SDK for JSVM",
   "main": "dist/index.cjs",
   "types": "dist/index.d.ts",
@@ -13,10 +13,10 @@
     "chokidar-cli": "^3.0.0",
     "pocketbase-jsvm": "^0.25.10001",
     "tsup": "^8.3.6",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "pocketpages": "workspace:^0.15.0"
   },
   "dependencies": {
-    "pocketpages": "workspace:^0.15.0",
     "pocketbase-js-sdk-jsvm": "^0.25.10003"
   },
   "files": [
