--- a/packages/plugins/micro-dash/package.json
+++ b/packages/plugins/micro-dash/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pocketpages-plugin-micro-dash",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
   "main": "dist/index.cjs",
   "types": "dist/index.d.ts",
@@ -12,9 +12,7 @@
     "@s-libs/micro-dash": "^18.0.0",
     "chokidar-cli": "^3.0.0",
     "tsup": "^8.3.6",
-    "typescript": "^5.7.3"
-  },
-  "dependencies": {
+    "typescript": "^5.7.3",
     "pocketpages": "workspace:^0.15.0"
   },
   "files": [
