--- a/packages/plugins/sse/package.json
+++ b/packages/plugins/sse/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pocketpages-plugin-sse",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "SSE plugin for PocketPages",
   "main": "dist/index.cjs",
   "types": "dist/index.d.ts",
@@ -8,14 +8,12 @@
     "build": "tsup",
     "dev": "chokidar 'src/**/*' -c 'bun run build'"
   },
-  "dependencies": {
-    "pocketpages": "workspace:^0.15.0"
-  },
   "devDependencies": {
     "chokidar-cli": "^3.0.0",
     "pocketbase-jsvm": "^0.25.10001",
     "tsup": "^8.3.6",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "pocketpages": "workspace:^0.15.0"
   },
   "files": [
     "dist",
