--- a/packages/pocketpages/package.json
+++ b/packages/pocketpages/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pocketpages",
-  "version": "0.15.0",
+  "version": "0.15.1",
   "description": "Server-side JS pages for PocketBase",
   "author": {
     "name": "Ben Allfree",
@@ -29,7 +29,8 @@
     "@s-libs/micro-dash": "^18.0.0",
     "cookie": "^1.0.2",
     "qs-lite": "^1.0.0",
-    "url-parse": "^1.5.10"
+    "url-parse": "^1.5.10",
+    "pocketpages-plugin-ejs": "workspace:^0.0.4"
   },
   "devDependencies": {
     "@types/url-parse": "^1.4.11",
