--- a/packages/starters/auth/package.json
+++ b/packages/starters/auth/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.2",
   "dependencies": {
     "pocketpages": "workspace:^0.15.1",
-    "pocketpages-plugin-auth": "workspace:*",
-    "pocketpages-plugin-js-sdk": "workspace:*"
+    "pocketpages-plugin-auth": "workspace:^0.0.4",
+    "pocketpages-plugin-js-sdk": "workspace:^0.0.4"
   },
   "files": [
     "pb_hooks",
