--- a/packages/plugins/auth/package.json
+++ b/packages/plugins/auth/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.12",
     "chokidar-cli": "^3.0.0",
+    "pocketbase-js-sdk-jsvm": "^0.25.10004",
     "pocketbase-jsvm": "^0.25.10001",
     "tsup": "^8.3.6",
     "typescript": "^5.7.3"
