chore: root dev command

--- a/packages/plugins/marked/package.json
+++ b/packages/plugins/marked/package.json
@@ -5,7 +5,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup",
-    "dev": "chokidar 'src/**/*' -c 'bun run build'"
+    "dev": "bun run build && chokidar 'src/**/*' -c 'bun run build'"
   },
   "author": "",
   "license": "ISC",
