--- a/package.json
+++ b/package.json
@@ -9,6 +9,14 @@
     "typescript": "^5.7.3"
   },
   "scripts": {
+    "dev": "concurrently 'bun run dev:*'",
+    "dev:pocketpages": "cd packages/pocketpages && bun run dev",
+    "dev:plugins:auth": "cd packages/plugins/auth && bun run dev",
+    "dev:plugins:ejs": "cd packages/plugins/ejs && bun run dev",
+    "dev:plugins:js-sdk": "cd packages/plugins/js-sdk && bun run dev",
+    "dev:plugins:marked": "cd packages/plugins/marked && bun run dev",
+    "dev:plugins:micro-dash": "cd packages/plugins/micro-dash && bun run dev",
+    "dev:plugins:sse": "cd packages/plugins/sse && bun run dev",
     "build": "concurrently 'bun run build:*'",
     "build:pocketpages": "cd packages/pocketpages && bun run build",
     "build:plugins:auth": "cd packages/plugins/auth && bun run build",
